<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_report" tools:context="com.example.ibra.newproject.Report">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_of_violation"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/lunch"
            android:onClick="gender"
            android:orientation="vertical"
            android:layout_below="@+id/textView2">

            <RadioButton
                android:id="@+id/hitrunBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="typeOfViolation"
                android:text="@string/hit_and_run" />

            <RadioButton
                android:id="@+id/accidentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="typeOfViolation"
                android:text="@string/accident" />

            <RadioButton
                android:id="@+id/stolenBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="typeOfViolation"
                android:text="@string/stolen" />
            <RadioButton
                android:id="@+id/otherBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="typeOfViolation"
                android:text="@string/other" />
        </RadioGroup>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/violationOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/other" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_numberP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/numberPlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_plate" />

        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location" />

        </android.support.design.widget.TextInputLayout>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/time"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:hint="@string/time_last_seen"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        android:id="@+id/timeBtn"
        android:onClick="setTime"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/time"
        android:layout_toEndOf="@+id/time" />

</RelativeLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report"
            android:id="@+id/reportBtn"
            android:onClick="reportViolationClick"
            android:layout_below="@+id/scrollView"
            android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

    <com.michaldrabik.tapbarmenulib.TapBarMenu
        android:id="@+id/tapBarMenu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="bottom"
        android:layout_marginBottom="24dp">

        <ImageView

            android:id="@+id/item4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/home" />

        <ImageView
            android:id="@+id/item2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/search"
            />

        <Space
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            />

        <ImageView
            android:id="@+id/item1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/add"
            />

        <ImageView
            android:id="@+id/item3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/profile"
            />

    </com.michaldrabik.tapbarmenulib.TapBarMenu>

</LinearLayout>
    </LinearLayout>
</ScrollView>


</RelativeLayout>
