<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/cardView"
        android:background="#ff0000">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ff0004">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_plate"
                android:id="@+id/number_plate"
                android:textSize="20sp"
                android:autoText="false"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textColorHighlight="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:id="@+id/description"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner"
                android:id="@+id/owner"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:id="@+id/status"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>